feat(web-fe/dishes): add IngredientsInDishTable #4
